# haskell-sajson

./: .travis.yml  LICENSE  README.md  sajson.cabal  stack.yaml
.github/workflows/: ci.yml
bench/: Bench.hs
cbits/: sajson.hpp  sajson_wrapper.cpp  sajson_wrapper.h
src/Data/: Sajson.hs
test/: Spec.hs
