name:                sajson
version:             0.1.0.0
synopsis:            Fast JSON parsing powered by Chad Austin's sajson library
-- description:
homepage:            https://github.com/capital-match/haskell-sajson#readme
license:             MIT
license-file:        LICENSE
author:              Chad Austin, Zhouyu Qian
maintainer:          dev@capital-match.com
copyright:           2017 Chad Austin, Capital Match Holdings Pte Ltd
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Sajson
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , aeson
                     , vector
                     , scientific
                     , unordered-containers
  default-language:    Haskell2010
  include-dirs:        cbits
  c-sources:           cbits/sajson_wrapper.cpp
  cc-options:          -Wall -Werror -O3 -march=native -std=c++14
  ghc-options:         -Wall -Werror

test-suite sajson-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sajson
                     , hspec
                     , bytestring
  ghc-options:         -Wall -Werror -threaded -rtsopts
  default-language:    Haskell2010
  extra-libraries:     stdc++

source-repository head
  type:     git
  location: https://github.com/capital-match/haskell-sajson
