name:                sajson
version:             0.1.0.0
synopsis:            Fast JSON parsing powered by Chad Austin's sajson library
description:
    A fast JSON parsing library that is faster than aeson.
homepage:            https://github.com/capital-match/haskell-sajson#readme
license:             MIT
license-file:        LICENSE
author:              Chad Austin, Zhouyu Qian
maintainer:          zhouyu@capital-match.com
copyright:           (c) 2012-2017 Chad Austin
                     (c) 2017 Capital Match Holdings Pte Ltd
category:            Web, Text, JSON
stability:           experimental
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.2

library
  hs-source-dirs:      src
  exposed-modules:     Data.Sajson
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , text
                     , aeson
                     , vector
                     , scientific
                     , unordered-containers
  default-language:    Haskell2010
  include-dirs:        cbits
  c-sources:           cbits/sajson_wrapper.cpp
  cc-options:          -Wall -Werror -O3 -march=native -std=c++11 -fomit-frame-pointer
  ghc-options:         -Wall -Werror -O2

test-suite sajson-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sajson
                     , QuickCheck
                     , aeson
                     , bytestring
                     , hspec
                     , scientific
                     , text
                     , unordered-containers
                     , vector
  ghc-options:         -Wall -Werror -threaded -rtsopts
  default-language:    Haskell2010
  extra-libraries:     stdc++

source-repository head
  type:     git
  location: https://github.com/capital-match/haskell-sajson
