name:                sajson
version:             0.1.0.0
synopsis:            Fast JSON parsing powered by Chad Austin's sajson library
description:
    A fast JSON parsing library that is faster than aeson.
homepage:            https://github.com/kccqzy/haskell-sajson#readme
license:             MIT
license-file:        LICENSE
author:              Chad Austin, Zhouyu Qian
maintainer:          qzy@qzy.io
copyright:           (c) 2012-2017 Chad Austin
                     (c) 2017 Zhouyu Qian
category:            Web, Text, JSON
stability:           experimental
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.2

library
  hs-source-dirs:      src
  exposed-modules:     Data.Sajson
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , text
                     , aeson
                     , vector
                     , scientific
                     , unordered-containers
  default-language:    Haskell2010
  include-dirs:        cbits
  c-sources:           cbits/sajson_wrapper.cpp
                     , cbits/sajson_wrapper.h
  install-includes:    cbits/sajson.hpp
  cc-options:          -Wall -O3 -march=native -std=c++11 -fomit-frame-pointer
  ghc-options:         -Wall -O2
  extra-libraries:     stdc++

test-suite sajson-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sajson
                     , QuickCheck
                     , aeson
                     , bytestring
                     , hspec
                     , scientific
                     , text
                     , unordered-containers
                     , vector
  ghc-options:         -Wall -threaded -rtsopts
  default-language:    Haskell2010

executable sajson-bench
  hs-source-dirs:      bench
  main-is:             Bench.hs
  build-depends:       base
                     , sajson
                     , criterion
                     , aeson
                     , bytestring
  ghc-options:         -Wall -threaded -rtsopts
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kccqzy/haskell-sajson
